@@ -16,6 +16,7 @@ Bugs fixed:
 - 3199899 sfcb uninstall process should remove test mof's 
 - 3300167 Memory leaks caused by cimRequest changes
 - 3101157 Failed to enable provider timing analysis with SfcbLocal
+- 3400114 sfcb fails to start with ipv6 disabled
 
 Changes in 1.4.1
 ================
